--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "serve": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@primeng/themes": "~19.0.6",
+    "primeng": "~19.0.6",
+    "primeicons": "~7.0.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "~4.0.0",
+    "tailwindcss-primeui": "~0.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -26,6 +31,7 @@
     "@angular-devkit/build-angular": "^19.1.7",
     "@angular/cli": "^19.1.7",
     "@angular/compiler-cli": "^19.1.0",
+    "@tailwindcss/postcss": "~4.0.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
@@ -33,6 +39,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "~8.5.2",
     "typescript": "~5.7.2"
   }
 }
